Initial commit - support for program Nat variables and automatically adding simple closed forms

--- a/parser_generator/Makefile
+++ b/parser_generator/Makefile
@@ -4,8 +4,8 @@ PARSER_SRC=$(SRCDIR)/parser/WhileParser.cpp
 PARSER_HDR=$(SRCDIR)/parser/WhileParser.hpp
 SCANNER_SRC=$(SRCDIR)/parser/WhileScanner.cpp
 
-BISON=/usr/local/opt/bison/bin/bison
-FLEX=/usr/local/opt/flex/bin/flex
+BISON=/usr/bin/bison
+FLEX=/usr/bin/flex
 
 all: $(PARSER_SRC) $(PARSER_HDR) $(SCANNER_SRC)
 
@@ -19,5 +19,5 @@ $(SCANNER_SRC): WhileScanner.ll
 
 clean:
 
-mrproper:
+mrproper: 
 	rm $(PARSER_SRC) $(PARSER_HDR) $(SCANNER_SRC) stack.hh
