--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ project (Rapid)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-# add directoy, where we store all custom files for finding libraries which are not build using cmake (i.e. currently nothing), to the search path of cmake
+# add directory, where we store all custom files for finding libraries which are not build using cmake (i.e. currently nothing), to the search path of cmake
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")
 
 # add top level directory to the search path of compiler
@@ -22,14 +22,13 @@ add_executable(test src/test.cpp)
 
 
 add_subdirectory(src/analysis)
-add_subdirectory(src/declarations)
 add_subdirectory(src/logic)
 add_subdirectory(src/parser)
 add_subdirectory(src/program)
 add_subdirectory(src/util)
 
-target_link_libraries(rapid analysis declarations logic parser program util)
-target_link_libraries(test analysis declarations logic parser program util)
+target_link_libraries(rapid analysis logic parser program util)
+target_link_libraries(test analysis logic parser program util)
 
 add_custom_command(TARGET test POST_BUILD
         COMMAND ${CMAKE_COMMAND} -E copy_directory
