--- a/src/analysis/CMakeLists.txt
+++ b/src/analysis/CMakeLists.txt
@@ -27,4 +27,4 @@ set(SPECTRE_ANALYSIS_HEADERS
 
 add_library(analysis ${SPECTRE_ANALYSIS_SOURCES} ${SPECTRE_ANALYSIS_HEADERS})
 target_include_directories(analysis PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
-target_link_libraries(analysis program logic declarations)
+target_link_libraries(analysis program logic)
