--- a/src/program/CMakeLists.txt
+++ b/src/program/CMakeLists.txt
@@ -1,4 +1,5 @@
 set(SPECTRE_PROGRAM_SOURCES
+    SymbolDeclarations.cpp
     Expression.cpp
     Variable.cpp
     Statements.cpp
@@ -7,6 +8,7 @@ set(SPECTRE_PROGRAM_SOURCES
 )
 
 set(SPECTRE_PROGRAM_HEADERS
+    SymbolDeclarations.hpp
     Expression.hpp
     Variable.hpp
     Statements.hpp
@@ -16,4 +18,4 @@ set(SPECTRE_PROGRAM_HEADERS
 
 add_library(program ${SPECTRE_PROGRAM_SOURCES} ${SPECTRE_PROGRAM_HEADERS})
 target_include_directories(program PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
-target_link_libraries(program util)
+target_link_libraries(program logic util)
