--- a/parser_generator/Makefile
+++ b/parser_generator/Makefile
@@ -4,8 +4,10 @@ PARSER_SRC=$(SRCDIR)/parser/WhileParser.cpp
 PARSER_HDR=$(SRCDIR)/parser/WhileParser.hpp
 SCANNER_SRC=$(SRCDIR)/parser/WhileScanner.cpp
 
-BISON=/usr/local/opt/bison/bin/bison
-FLEX=/usr/local/opt/flex/bin/flex
+#BISON=win_bison
+#FLEX=win_flex
+BISON=bison
+FLEX=flex
 
 all: $(PARSER_SRC) $(PARSER_HDR) $(SCANNER_SRC)
 
