Addressed problems discussed on GitHub Bug for nested loops

--- a/parser_generator/Makefile
+++ b/parser_generator/Makefile
@@ -4,10 +4,8 @@ PARSER_SRC=$(SRCDIR)/parser/WhileParser.cpp
 PARSER_HDR=$(SRCDIR)/parser/WhileParser.hpp
 SCANNER_SRC=$(SRCDIR)/parser/WhileScanner.cpp
 
-#BISON=win_bison
-#FLEX=win_flex
-BISON=bison
-FLEX=flex
+BISON=/usr/local/opt/bison/bin/bison
+FLEX=/usr/local/opt/flex/bin/flex
 
 all: $(PARSER_SRC) $(PARSER_HDR) $(SCANNER_SRC)
 
