--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,8 @@
 cmake_minimum_required (VERSION 3.6.3)
 
+add_compile_options(-fsanitize=address)
+add_link_options(-fsanitize=address)
+
 ################################################################
 project (Rapid)
 ################################################################
