--- a/src/logic/CMakeLists.txt
+++ b/src/logic/CMakeLists.txt
@@ -4,7 +4,7 @@ set(SPECTRE_LOGIC_SOURCES
     Sort.cpp
     Term.cpp
     Theory.cpp
-    Problem.cpp
+    LogicProblem.cpp
 )
 set(SPECTRE_LOGIC_HEADERS
     Formula.hpp
@@ -12,7 +12,7 @@ set(SPECTRE_LOGIC_HEADERS
     Sort.hpp
     Term.hpp
     Theory.hpp
-    Problem.hpp
+    LogicProblem.hpp
 )
 
 add_library(logic ${SPECTRE_LOGIC_SOURCES} ${SPECTRE_LOGIC_HEADERS})
