various updates and fixes. About to start work on double linked lists and problems where we need to reason over lsit splits

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,17 +12,19 @@ project (Rapid)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+# message(${Vampire_DIR})
+
 find_library(VAMPIRE_LIB vampire HINTS ${Vampire_DIR} $ENV{HOME}/vampire PATH_SUFFIXES lib bin)
 
 find_path(VAMPIRE_INCLUDE_DIRS Solver.hpp HINTS ${Vampire_DIR}/../Api $ENV{HOME}/vampire PATH_SUFFIXES include)
 
-if(VAMPIRE_INCLUDE_DIRS STREQUAL "VAMPIRE_INCLUDE_DIRS-NOTFOUND")
-    message(FATAL_ERROR "Could not find vampire include headers, please check Vampire_DIR")
-endif()
-
 if(VAMPIRE_LIB STREQUAL "VAMPIRE_LIB-NOTFOUND")
     message(FATAL_ERROR "Could not find libvampire, please check Vampire_DIR")
 endif() 
+
+if(VAMPIRE_INCLUDE_DIRS STREQUAL "VAMPIRE_INCLUDE_DIRS-NOTFOUND")
+    message(FATAL_ERROR "Could not find vampire include headers, please check Vampire_DIR")
+endif()
 
 # add directoy, where we store all custom files for finding libraries which are not build using cmake (i.e. currently nothing), to the search path of cmake
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")
